# f1-rating-system

./: .gitignore  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.dvc/: config
data/processed/: 2024.csv  avg_goat.csv  avg_hist.csv  con_imp.csv  cur_con.csv  cur_dri.csv  dri_imp.csv  goat.csv  gott.csv  gott_days.csv  hist.csv  last_race.json  one_off.json  rank.csv
data/prod/: gott.csv  gott_days.csv
data/raw/: circuits.csv.dvc  constructor_colours.csv  constructor_results.csv.dvc  constructor_standings.csv.dvc  constructor_year.csv  constructors.csv.dvc  driver_standings.csv.dvc  drivers.csv.dvc  lap_times.csv.dvc  pit_stops.csv.dvc  qualifying.csv.dvc  races.csv.dvc  results.csv.dvc  seasons.csv.dvc  sprint_results.csv.dvc  status.csv.dvc
dvclive/: metrics.json  params.yaml
dvclive/plots/metrics/: RMSE.tsv
models/: metrics.json  params.yaml
notebooks/: 0_baseline_model.ipynb  1_elo_model.ipynb  assym_model.ipynb  baseline_model.ipynb  eda.ipynb  model_performance.ipynb  prototyping.ipynb
notebooks/dvclive/: metrics.json  params.yaml
notebooks/dvclive/plots/metrics/: SSE.tsv
src/f1_elo/: app.py  data.py  features.py  model.py  report.py
src/f1_elo/pages/: compare_constructors.py  compare_drivers.py  constructors.py  current_constructors.py  current_drivers.py  drivers.py  goat.py  home.py
src/f1_rating_system/: data.py
src/f1_rating_system/pages/: goat.py
