[tool.poetry]
name = "f1-elo"
version = "0.1.0"
description = ""
authors = ["mwtmurphy <mitchell@motorway.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
streamlit = "^1.28.2"
pandas = "^2.1.3"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
dvc = "^3.30.1"
ipykernel = "^6.26.0"
watchdog = "^3.0.0"
tqdm = "^4.66.1"
dvclive = "^3.3.1"
python-dotenv = "^1.0.0"
bayesian-optimization = "^1.4.3"
nbformat = "^5.9.2"
dvc-gdrive = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
