[tool.poetry]
name = "f1-rating-system"
version = "0.1.0"
description = ""
authors = ["mwtmurphy <mitchell@motorway.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
streamlit = "^1.28.2"
pandas = "^2.1.3"
plotly = "^5.18.0"
altair = "^5.3.0"
st-theme = "^1.2.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
watchdog = "^3.0.0"
tqdm = "^4.66.1"
python-dotenv = "^1.0.0"
bayesian-optimization = "^1.4.3"
nbformat = "^5.9.2"
seaborn = "^0.13.2"
line-profiler = "^4.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
